--- a/frontend/env.example
+++ b/frontend/env.example
@@ -4,6 +4,7 @@ DATABASE_URL=postgresql://user:password@localhost:5432/polymarket_bot
 # Telegram
 # Get this from @BotFather
 BOT_TOKEN=your-telegram-bot-token
+NEXT_PUBLIC_BOT_USERNAME=your_bot_username_without_at
 
 # Auth
 # Generate a random string: openssl rand -base64 32
