fix: simplify nginx redirect for Cloudflare SSL

--- a/nginx-redirect.conf
+++ b/nginx-redirect.conf
@@ -1,5 +1,5 @@
 # Nginx configuration for polygraalx.app root domain redirect
-# This file redirects all traffic from polygraalx.app to app.polygraalx.app
+# Cloudflare handles SSL termination, so we only need port 80
 
 server {
     listen 80;
@@ -7,18 +7,5 @@ server {
     server_name polygraalx.app www.polygraalx.app;
 
     # Redirect to HTTPS app subdomain
-    return 301 https://app.polygraalx.app$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name polygraalx.app www.polygraalx.app;
-
-    # SSL certificates (same as app subdomain or use separate)
-    ssl_certificate /etc/letsencrypt/live/polygraalx.app/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/polygraalx.app/privkey.pem;
-
-    # Redirect to app subdomain
     return 301 https://app.polygraalx.app$request_uri;
 }
