--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,10 @@ jobs:
               python3 -m venv venv
             fi
             
+            # Configurer .env en mode paper trading si absent
+            chmod +x setup-env.sh
+            ./setup-env.sh
+            
             # Installer/mettre à jour les dépendances
             ./venv/bin/pip install -r requirements.txt --upgrade
             
