--- a/.env.template
+++ b/.env.template
@@ -58,7 +58,8 @@ MAX_TIME_TO_EXPIRY=840
 
 # Comma-separated list of assets to trade
 # Valid values: BTC, ETH
-TRADE_ASSETS=BTC,ETH
+# RECOMMENDED: BTC only (75% win rate in testing vs 50% for ETH)
+TRADE_ASSETS=BTC
 
 # ══════════════════════════════════════════════════════════════════════════════
 # RISK MANAGEMENT
