Cleanup: Remove test files and unused deploy script

--- a/.env.template
+++ b/.env.template
@@ -58,8 +58,7 @@ MAX_TIME_TO_EXPIRY=840
 
 # Comma-separated list of assets to trade
 # Valid values: BTC, ETH
-# RECOMMENDED: BTC only (75% win rate in testing vs 50% for ETH)
-TRADE_ASSETS=BTC
+TRADE_ASSETS=BTC,ETH
 
 # ══════════════════════════════════════════════════════════════════════════════
 # RISK MANAGEMENT
